update industries
